changes to profile layout and points

--- a/app/src/main/res/layout/fragment_fp__str__training.xml
+++ b/app/src/main/res/layout/fragment_fp__str__training.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/containerFitnessP"
-    android:background="@drawable/background3"
+    android:background="#010100"
     >
 
 
@@ -16,7 +16,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="25dp"
         android:layout_gravity="center"
-        />
+        android:background="#46d4e8" />
 
     <Button
         android:layout_width="300dp"
@@ -26,7 +26,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="125dp"
         android:layout_gravity="center"
-        />
+        android:background="#46d4e8" />
 
     <Button
         android:layout_width="300dp"
@@ -38,7 +38,7 @@
         android:layout_marginBottom="75dp"
         android:layout_gravity="center"
         android:height="@dimen/activity_vertical_margin"
-        />
+        android:background="#46d4e8" />
 
     <Button
         android:layout_width="300dp"
@@ -49,7 +49,7 @@
         android:layout_alignStart="@+id/day4Strength"
         android:layout_marginBottom="-75dp"
         android:layout_gravity="center"
-        />
+        android:background="#46d4e8" />
 
     <Button
         android:layout_width="300dp"
@@ -60,7 +60,7 @@
         android:layout_alignStart="@+id/day3Strength"
         android:layout_marginBottom="-25dp"
         android:layout_gravity="center"
-        />
+        android:background="#46d4e8" />
 
     <Button
         android:layout_width="wrap_content"
@@ -76,6 +76,6 @@
         android:text="How To"
         android:id="@+id/howTo"
         android:layout_gravity="right|bottom"
-        />
+        android:background="#46d4e8" />
 
 </FrameLayout>
