--- a/app/src/main/res/layout/fragment_max.xml
+++ b/app/src/main/res/layout/fragment_max.xml
@@ -2,20 +2,21 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/containerFitnessP"
-    android:background="@drawable/background2"
+
     >
 
 
 
         <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent">
+            android:layout_height="fill_parent"
+            android:background="#010100">
 
         <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_height="fill_parent"
             android:layout_width="fill_parent"
             android:orientation="vertical"
-            >
+            android:background="#010100">
 
 
     <TextView
@@ -29,28 +30,25 @@
         android:gravity="right|center_vertical"
         android:layout_marginTop="20dp"
         />
-            <EditText
-                android:layout_width="130dp"
-                android:layout_height="37dp"
-                android:id="@+id/userBench"
-                android:inputType="number"
-                android:layout_gravity="left|center_vertical"
-                android:background="#f5ffee"
-                android:hint="Bench Press"
-                android:layout_marginLeft="50dp"
-                android:layout_alignBottom="@+id/setBench"
-                android:layout_toEndOf="@+id/squatText" />
+
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="Set Bench"
                 android:id="@+id/setBench"
-                android:gravity="right|center_vertical"
                 android:layout_below="@+id/benchText"
-                />
+                android:background="#46d4e8" />
 
 
-
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/userBench"
+                android:layout_gravity="right|top"
+                android:textColor="#46d4e8"
+                android:textSize="20dp"
+                android:layout_toEndOf="@+id/benchText"
+                android:layout_marginTop="20dp"/>
 
             <TextView
         android:layout_width="wrap_content"
@@ -66,19 +64,20 @@
         />
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="Set Squat"
                 android:id="@+id/setSquat"
                 android:layout_below="@+id/squatText"
-                android:layout_alignParentStart="true" />
+                android:layout_alignParentStart="true"
+                android:background="#46d4e8" />
 
             <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/userSquat"
             android:layout_gravity="right|top"
-            android:textColor="#ffffff"
+            android:textColor="#46d4e8"
             android:textSize="20dp"
             android:layout_toEndOf="@+id/squatText"
             android:layout_below="@+id/setBench"
@@ -96,12 +95,13 @@
         />
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="Set DeadLift"
                 android:id="@+id/setDeadLift"
                 android:layout_below="@+id/deadliftText"
-                android:layout_alignParentStart="true" />
+                android:layout_alignParentStart="true"
+                android:background="#46d4e8" />
 
             <TextView
             android:layout_width="wrap_content"
@@ -109,7 +109,7 @@
             android:id="@+id/userDeadlift"
             android:layout_gravity="right|center_vertical"
             android:textSize="20dp"
-            android:textColor="#ffffff"
+            android:textColor="#46d4e8"
             android:layout_toEndOf="@+id/deadliftText"
             android:layout_below="@+id/setSquat"
                 android:layout_marginTop="10dp"/>
@@ -128,21 +128,21 @@
         android:layout_marginTop="10dp"/>
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="Set MileTime"
                 android:id="@+id/setMileTime"
                 android:layout_alignParentStart="true"
                 android:layout_marginBottom="83dp"
                 android:layout_below="@+id/mileText"
-                />
+                android:background="#46d4e8" />
 
             <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/userTime"
             android:layout_gravity="right|top"
-            android:textColor="#ffffff"
+            android:textColor="#46d4e8"
             android:textSize="20dp"
             android:textIsSelectable="true"
             android:layout_toEndOf="@+id/mileText"
