--- a/app/src/main/res/layout/fragment_body_building_day_three.xml
+++ b/app/src/main/res/layout/fragment_body_building_day_three.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" tools:context="edu.sc.FitLivin.BodyBuildingDayThree"
     android:id="@+id/containerFitnessP"
-    android:background="@drawable/background3"
+    android:background="#010100"
 
     >
 
