--- a/app/src/main/res/layout/fragment_fitness_program.xml
+++ b/app/src/main/res/layout/fragment_fitness_program.xml
@@ -10,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
         android:id="@+id/linview"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:background="#010100">
 
         <TextView
             android:layout_width="wrap_content"
@@ -44,7 +45,7 @@
             android:layout_below="@+id/basedOnGoalsText"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="70dp"
-            />
+            android:background="#46d4e8" />
 
 
         <TextView
@@ -70,7 +71,7 @@
             android:layout_centerHorizontal="true"
 
 
-            />
+            android:background="#46d4e8" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -95,7 +96,7 @@
             android:clickable="true"
             android:layout_below="@+id/bodyBuildingText"
             android:layout_centerHorizontal="true"
-            />
+            android:background="#46d4e8" />
 
         <TextView
             android:layout_width="wrap_content"
