--- a/app/src/main/res/layout/fragment_fp__body__building.xml
+++ b/app/src/main/res/layout/fragment_fp__body__building.xml
@@ -2,8 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/containerFitnessP"
-    android:background="@drawable/background3"
-    >
+    android:background="#010100">
 
     <Button
         android:layout_width="300dp"
@@ -14,7 +13,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="25dp"
         android:layout_gravity="center"
-         />
+        android:background="#46d4e8" />
 
     <Button
         android:layout_width="300dp"
@@ -25,7 +24,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="125dp"
         android:layout_gravity="center"
-        />
+        android:background="#46d4e8" />
 
     <Button
         android:layout_width="300dp"
@@ -37,7 +36,7 @@
         android:layout_marginBottom="75dp"
         android:layout_gravity="center"
         android:height="@dimen/activity_vertical_margin"
-         />
+        android:background="#46d4e8" />
 
     <Button
         android:layout_width="300dp"
@@ -48,7 +47,7 @@
         android:layout_alignStart="@+id/day4BodyBuilding"
         android:layout_marginBottom="-75dp"
         android:layout_gravity="center"
-         />
+        android:background="#46d4e8" />
 
     <Button
         android:layout_width="300dp"
@@ -59,7 +58,7 @@
         android:layout_alignStart="@+id/day3BodyBuilding"
         android:layout_marginBottom="-25dp"
         android:layout_gravity="center"
-         />
+        android:background="#46d4e8" />
 
     <Button
         android:layout_width="wrap_content"
