--- a/app/src/main/res/layout/fragment_goal.xml
+++ b/app/src/main/res/layout/fragment_goal.xml
@@ -1,7 +1,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background3"
+    android:background="#b3010101"
     tools:context="edu.sc.FitLivin.GoalFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -15,7 +15,7 @@
             android:layout_height="fill_parent"
             android:layout_width="fill_parent"
             android:orientation="vertical"
-            >
+            android:background="#010101">
 
 
         <TextView
@@ -34,6 +34,7 @@
                 android:layout_height="wrap_content"
                 android:text="Set Weight"
                 android:id="@+id/setWeight"
+                android:background="#46d4e8"
                 android:layout_below="@+id/editnametext"
                 android:layout_alignParentStart="true"
                 />
@@ -43,7 +44,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/currentWeightGoal"
             android:layout_gravity="right|top"
-            android:textColor="#ffffff"
+            android:textColor="#46d4e8"
             android:textSize="20dp"
             android:textIsSelectable="true"
             android:layout_toEndOf="@+id/editnametext"
@@ -67,6 +68,7 @@
                 android:layout_height="wrap_content"
                 android:text="Set Weight"
                 android:id="@+id/setWeightG"
+                android:background="#46d4e8"
                 android:layout_below="@+id/weightGain"
                 android:layout_alignParentStart="true"
                 />
@@ -76,7 +78,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/currentWeightGainGoal"
             android:layout_gravity="right|top"
-            android:textColor="#ffffff"
+            android:textColor="#46d4e8"
             android:textSize="20dp"
             android:textIsSelectable="true"
             android:layout_toEndOf="@+id/weightGain"
@@ -102,6 +104,7 @@
                 android:layout_height="wrap_content"
                 android:text="Set Bench"
                 android:id="@+id/setBench"
+                android:background="#46d4e8"
                 android:layout_below="@+id/BenchText"
                 android:layout_alignParentStart="true"
                 />
@@ -111,7 +114,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/currentBenchGoal"
             android:layout_gravity="right|top"
-            android:textColor="#ffffff"
+            android:textColor="#46d4e8"
             android:textSize="20dp"
             android:textIsSelectable="true"
             android:layout_toEndOf="@+id/BenchText"
@@ -137,6 +140,7 @@
                 android:layout_height="wrap_content"
                 android:text="Set Squat"
                 android:id="@+id/setSquat"
+                android:background="#46d4e8"
                 android:layout_below="@+id/SquatText"
                 android:layout_alignParentStart="true"
                 />
@@ -146,7 +150,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/currentSquatGoal"
             android:layout_gravity="right|top"
-            android:textColor="#ffffff"
+            android:textColor="#46d4e8"
             android:textSize="20dp"
             android:textIsSelectable="true"
             android:layout_toEndOf="@+id/SquatText"
@@ -173,6 +177,7 @@
                 android:layout_height="wrap_content"
                 android:text="Set DeadLift"
                 android:id="@+id/setDeadLift"
+                android:background="#46d4e8"
                 android:layout_below="@+id/DeadLiftText"
                 android:layout_alignParentStart="true"
                 />
@@ -182,7 +187,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/currentDeadLiftGoal"
             android:layout_gravity="right|top"
-            android:textColor="#ffffff"
+            android:textColor="#46d4e8"
             android:textSize="20dp"
             android:textIsSelectable="true"
             android:layout_toEndOf="@+id/DeadLiftText"
@@ -209,6 +214,7 @@
                 android:layout_height="wrap_content"
                 android:text="Set MileTime"
                 android:id="@+id/setMileTime"
+                android:background="#46d4e8"
                 android:layout_below="@+id/MileTimeText"
                 android:layout_alignParentStart="true"
                 />
@@ -218,7 +224,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/currentMileTimeGoal"
             android:layout_gravity="right|top"
-            android:textColor="#ffffff"
+            android:textColor="#46d4e8"
             android:textSize="20dp"
             android:textIsSelectable="true"
             android:layout_toEndOf="@+id/MileTimeText"
