--- a/app/src/main/res/layout/fragment_profile__page.xml
+++ b/app/src/main/res/layout/fragment_profile__page.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/containerFitnessP"
-    android:background="#b3010101"
+    android:background="#010101"
     >
 
 
@@ -17,6 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
         android:id="@+id/linview"
+        android:background="#b3010101"
         >
 
 
