--- a/app/src/main/res/layout/fragment_track_progress.xml
+++ b/app/src/main/res/layout/fragment_track_progress.xml
@@ -14,7 +14,7 @@
             android:layout_height="fill_parent"
             android:layout_width="fill_parent"
             android:orientation="vertical"
-            >
+            android:background="#010100">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -53,7 +53,7 @@
             android:id="@+id/listView2"
             android:textAlignment="center"
             android:animateLayoutChanges="true"
-
+                android:textColor="#ffffff"
             android:layout_gravity="center_horizontal|bottom" />
 
             <Button
