--- a/app/src/main/res/layout/fragment_weightloss_day_two.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_two.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
     android:layout_height="wrap_content" tools:context="edu.sc.FitLivin.BodyBuildingDayOne"
     android:id="@+id/containerFitnessP"
-    android:background="@drawable/background3"
+    android:background="#010100"
     >
 
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
