--- a/app/src/main/res/layout/fragment_weightloss_howto.xml
+++ b/app/src/main/res/layout/fragment_weightloss_howto.xml
@@ -46,7 +46,8 @@
             "
             android:id="@+id/textView24"
             android:layout_gravity="right|center_vertical"
-            android:textColor="#FFFFFF" />
+            android:textColor="#FFFFFF"
+            android:background="#010100" />
 
         <Button
             android:layout_width="wrap_content"
