Max Page keypad entry fixed

--- a/app/src/main/res/layout/fragment_max.xml
+++ b/app/src/main/res/layout/fragment_max.xml
@@ -29,17 +29,7 @@
         android:gravity="right|center_vertical"
         android:layout_marginTop="20dp"
         />
-            <EditText
-                android:layout_width="130dp"
-                android:layout_height="37dp"
-                android:id="@+id/userBench"
-                android:inputType="number"
-                android:layout_gravity="left|center_vertical"
-                android:background="#f5ffee"
-                android:hint="Bench Press"
-                android:layout_marginLeft="50dp"
-                android:layout_alignBottom="@+id/setBench"
-                android:layout_toEndOf="@+id/squatText" />
+
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -58,6 +48,8 @@
         android:text="Current Squat (lbs):"
         android:id="@+id/squatText"
         android:layout_gravity="left|top"
+                android:inputType="number"
+                android:digits="1234567890"
         android:textColor="#ffffff"
         android:textSize="20dp"
         android:gravity="right|center_vertical"
