--- a/app/src/main/res/layout/fragment_fp__wgt__loss.xml
+++ b/app/src/main/res/layout/fragment_fp__wgt__loss.xml
@@ -61,8 +61,10 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="BACK"
-        android:id="@+id/backButtonWeightLoss"
+        android:text="How To"
+        android:id="@+id/howTo"
         android:layout_gravity="center_horizontal|bottom"
-        />
+        android:background="#46d4e8" />
+
+
 </FrameLayout>
